# speedie

./: .gitattributes  .gitignore  README.md
.Funny.scproj/input/: Bleeper.spd  Swears.spd
Cake.scproj/: .perry
Cake.scproj/input/: .todo  ASM.spd  Args.spd  Cake.spd  ClassLoader.spd  FileWithData.spd  Globals.spd  PerryTalker.spd  SourceMap.spd  StackTrace.spd  Stepper.spd  app.conf  crashed.spd  debugger.spd  functions.spd  linker.spd  main.spd  package.spd  packglobs.spd  types.spd  utils.spd  vars.box  vars.spd
Documentation/: Advanced.md  Behaviours.md  Cake.md  Comparisons.md  Errors.md  ErrorsAdvanced.md  FAQ.md  FlowControl.md  Jeebox.md  LanguageGuide.md  Message.md  MessageClass.md  Nil.md  Objects.md  OptimisationTricks.md  Perry.md  ProjectStructure.md  Safety.md  Speed.md  Strings.md  TotalFlowLogging.md  VM.md  isms.md  jbin.md  lists.md  speedie.pldb  tasks.md  xml.md  xml_dtd.md
Documentation/Advanced/: Advanced.md  Errors.md  SpeedLosses.md  SpeedieVsC.md  TotalFlowLogging.md
Documentation/CppComparison/: SortLines.cpp
Examples/: CppCheese.spd  ListSearch.spd  ShaderCoding.spd  SortLines.spd  SpamLines.spd  TITS.spd  ana.spd  armstrong.spd  arrow.spd  banana_count.spd  bit_test.spd  breakout.spd  c_sharp.spd  casting.spd  challenge_1.spd  clamp.spd  config_reader.spd  countlines.spd  fibonacci.spd  glob_test.spd  guess.spd  hello_world.spd  iching.spd  list_files.spd  main.spd  main2.spd  months.spd  passcode.spd  power_tower.spd  prototest.spd  randomwords.spd  reflection.spd  rule110.spd  slowtalk.spd  speedie_syntax.spd  stackoverflow.spd  swears.spd  task_test.spd  word_numbers.spd  zalgo.spd
Examples/(experimental)/: encoding_tests.spd
Examples/books_xml/: .perry  books.box  books.xml  booksearch.spd
Examples/comparisons/: widget.json
Examples/xml_dtd/: card.spd  tv.box  tv.val.spd  tv.xml
FirstProj.scproj/input/: main.spd
GUI.scproj/gui.input/: .perry  .todo  gui.conf  index.spd
GameExamples/: ShaderCoding.spd  TicTacToe.spd  apocalypse.spd  arkanoid3D.spd  bikes.spd  bubbles.spd  dda_line_drawing.spd  guess.spd  inferno.spd  mandelbrute.spd  reflection.spd  sand.spd  snake.spd  spirals.spd  terminal.spd  tetris.spd
GameExamples/(experimental)/: car.model
Image.scproj/image.input/: .perry  Colors.spd  DrawStyle.spd  Fonts.spd  Image.spd  ImagePixel.spd  image.conf  index.spd
Language2.scproj/: Translate.txt
Language2.scproj/Language.input/: .todo  AddAndRemove.spd  Categories.spd  Concept.spd  Element.spd  ElementList.spd  EngDefaults.spd  FuncTable.spd  Gram.spd  Group.spd  Language.spd  LoaderState.spd  Tests.spd  Translate.spd  Utils.spd  Word.spd
Language2.scproj/Language2.xcodeproj/: project.pbxproj
LeFunny.scproj/input/: Swears.spd
Perry.scproj/: .args  .perry  Perry.app  PerryApp copy-Info.plist
Perry.scproj/A/: .perry
Perry.scproj/B/: .perry
Perry.scproj/Perry.xcodeproj/: project.pbxproj
Perry.scproj/newprojects/: GUI_App.spd  ShellTool.spd
Perry.scproj/perry.input/: .todo  ArgLights.spd  Commands.spd  DataFiles.spd  DebugEvents.spd  Defaults.spd  Effects.spd  Events.spd  IDE.spd  IDE_Events.spd  Index.spd  InitIDE.spd  Inits.spd  Install.spd  Keys.spd  LineSparkles.spd  Main.spd  Menus.spd  Paths.spd  Perry.spd  PerryErrors.spd  PerryTests.spd  PerryUtils.spd  StartupScreen.spd  Templates.spd  Tests.spd  app.conf  debugger.spd  effects.spd  gamedemo.spd  keys.spd  network.spd  nothing.spd  tips.box
Speedie.scproj/: .args  .perry  .strings.txt  FF_ARM64.S
Speedie.scproj/Batch/: ASMSpeed.spd  ShaderCoding.spd  ana  ana.spd  apoc.spd  chart.spd  cloc.spd  features.spd  jbcount.spd  jbin.spd  (+2 more)
Terminal/: .perry  PrepareSpeedie.sh  genbuild.spd  gitshrink.sh  gitt.sh  jbbuild.sh  jmake.spd  make.sh  make.spd  makelinux.sh  makeosx.sh  pre-push  speedie
Utils/: BatchTestCompile.spd  CompilerTest  CompilerTest.spd  ana.spd  apocalypse.spd  arc.spd  casting.spd  challenge_1.spd  cloc.args  cloc.spd  countlines.spd  diff_at.spd  find.spd  fizzbuss.spd  freq.spd  glob_test.spd  ipc_test_and_example.spd  jar.spd  jarc.spd  jbin_demo.spd  jbinfinder.spd  jz.spd  jz_test.spd  line_compress.spd  makebigfile.spd  maybe.spd  pi.spd  pz.spd  rep.spd  rm.spd  size.spd  slowcount.spd  sort.spd  sortfiles.spd  sortlines.spd  speedrogue.spd  tabs.spd  trunc.spd  xd.spd  xml_generator.spd
examples/: CppCheese.spd  PicoTest.spd  ShaderCoding.spd  SpamLines.spd  TicTacToe.spd  ana.spd  apocalypse.spd  armstrong.spd  asswipe_sorceror.spd  banana_count.spd  casting.spd  challenge_1.spd  cheese.spd  config_reader.spd  fizzbuss.spd  guess.spd  holly.spd  iching.spd  inferno.spd  maybe.spd  namespaces.spd  pi.spd  picotest.spd  power_tower.spd  slowtalk.spd  speedie_syntax.spd  swears.spd  task_test.spd
exec.scproj/: .perry  asm.design  demo.jx  demo.xpd  design.txt
jeebox.scproj/: .perry  CMakeLists.txt  README.md
jeebox.scproj/Cpp/: JB.cpp  JB.h  JB_Globals.cpp
jeebox.scproj/Examples/: Jeebox.h  Users.box  jb.cpp  jb_vscode.code-workspace  jeebox.h  jeebox_api.h  test.cpp  users.cpp  xml.cpp
jeebox.scproj/Examples/Test.xcodeproj/: project.pbxproj
jeebox.scproj/jeebox.input/: .perry  Binary.spd  Config.spd  Constants.spd  CppApi.spd  ErrorsMessage.spd  FreeWords (disabled).spd  ID.spd  JB_Api.spd  Macro.spd  Message.spd  MessageVName.spd  Parser.spd  ParserUtils.spd  Syntax.spd  Tests.spd  Validator.spd  XML.spd  index.spd  jeebox.conf  licence.txt
jeebox.scproj/jeebox.input/mz/: HollyEncoder.spd  Huffman.spd  MzCompression.spd  MzResearch.spd  MzStream.spd  MzUtil.spd  MzUtils.spd  Streamer.spd  holly.spd
(+482 files in other folders)
